--- a/src/container/ProductList/Productlist.css
+++ b/src/container/ProductList/Productlist.css
@@ -21,7 +21,7 @@
     height: 150px;
     width: 150px;
     overflow: hidden;
-    align-items: center;
+    text-align: center;
     margin: 15px auto;
 }
 
