--- a/src/components/MaterialUI/MaterialUI.css
+++ b/src/components/MaterialUI/MaterialUI.css
@@ -34,7 +34,8 @@
 
 /* Material Input */
 .materialInput {
-    width: 90%;
+    width: 100%;
+    max-width: 300px;
     height: 30px;
     border-bottom: 2px solid #2874f0;
     position: relative;
