--- a/src/components/MaterialUI/MaterialUI.css
+++ b/src/components/MaterialUI/MaterialUI.css
@@ -153,3 +153,8 @@
     background-color: #f0f0f0;
     cursor: pointer;
 }
+.anchorButton{
+    background: transparent;
+    border: none;
+    letter-spacing: 1px;
+  }
