--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,18 @@
-.header {
+.header{
   width: 100%;
   height: 56px;
   background: #2874f0;
 }
-
-.subHeader {
+.subHeader{
   max-width: 1100px;
   width: 100%;
   height: 100%;
   display: flex;
-  margin-left: 120px;
+  margin: 0 auto;   
   align-items: center;
 }
 
-.logo {
+.logo{
   width: 137px;
   height: 100%;
   overflow: hidden;
@@ -22,25 +21,21 @@
   justify-content: center;
   align-items: flex-end;
 }
-
-.logo .logoimage {
+.logo .logoimage{
   width: 75px;
 }
-
-.exploreText {
+.exploreText{ 
   font-size: 10px;
-  font-style: italic;
+  font-style: italic; 
 }
-
-.plusText {
-  font-size: 10px;
-  margin: 0 2px;
+.plusText{ 
+  font-size: 10px; 
+  margin: 0 2px; 
   text-transform: capitalize;
   font-style: italic;
   color: yellow;
 }
-
-.logo .goldenStar {
+.logo .goldenStar{
   width: 10px;
   height: 10px;
 }
@@ -54,7 +49,6 @@
   overflow: hidden;
   display: flex;
 }
-
 .searchInput {
   width: 518px;
   border: 0;
@@ -63,21 +57,18 @@
   box-sizing: border-box;
   padding: 0 10px;
 }
-
 .searchIconContainer {
   display: flex;
   flex: 1;
   justify-content: center;
   align-items: center;
 }
-
-.rightMenu {
+.rightMenu{
   display: flex;
   flex: 1;
   justify-content: flex-end;
   align-items: center;
 }
-
 .loginButton {
   display: block;
   width: 100px;
@@ -89,11 +80,8 @@
   font-weight: 500;
   font-size: 16px;
   cursor: pointer;
-  z-index: 50;
 }
-
-.more,
-.fullName {
+.more, .fullName {
   font-weight: bold;
   color: #fff;
   display: flex;
@@ -101,7 +89,6 @@
   margin: 0 20px;
   cursor: pointer;
 }
-
 .cart {
   font-weight: bold;
   color: #fff;
@@ -111,47 +98,46 @@
   margin: 0 20px
 }
 
-.authContainer {
-  color: #212121;
-  margin: 0 auto;
-  border-radius: 2px;
-  height: 528px;
+.authContainer{
+color: #212121;
+margin: 0 auto;
+border-radius: 2px;
+height: 528px;
+max-width: 750px;
+min-width: 650px;
+}
+.row{
+width: 100%;
+display: flex;
+flex-flow: row wrap;
+height: 528px;
   max-width: 750px;
   min-width: 650px;
 }
 
-.row {
-  width: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  height: 528px;
-  max-width: 750px;
-  min-width: 650px;
+.leftspace{
+width: 40%;
+height: 100%;
+color: #fff;
+letter-spacing: 1px;
+background-image: url('../../images/login-image.png');
+background-color: #2874f0;
+background-repeat: no-repeat;
+background-position: center 85%;
+padding: 40px 33px;
+box-sizing: border-box;
 }
 
-.leftspace {
-  width: 48%;
-  height: 100%;
-  color: #fff;
-  letter-spacing: 1px;
-  background-image: url('../../assets/login-image.png');
-  background-color: #2874f0;
-  background-repeat: no-repeat;
-  background-position: center 85%;
-  padding: 40px 33px;
-  box-sizing: border-box;
+.rightspace{
+display: flex;
+flex: 1;
+flex-direction: column;
+align-items: center;
 }
 
-.rightspace {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
-}
-
-.loginInputContainer {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0 30px;
-  margin: 40px 0;
+.loginInputContainer{
+width: 100%;
+box-sizing: border-box;
+padding: 0 30px;
+margin: 40px 0;
 }
